--- a/Api.BizSign.csproj
+++ b/Api.BizSign.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="Infrastructure\" />
+    <Folder Include="WebApi\" />
+  </ItemGroup>
+
 </Project>
